Revert "очередной тест (Поправили имя страницы)"
This reverts commit 1a56174e2faaaf03d6f347241f2c1438d89a6431.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html>
 	 <Head>
 		<meta charset="utf-8">
-		<title> Контакты 2 </title>
+		<title> Контакты </title>
 		<link href="style.css"  rel="stylesheet">
 
 
